Replace removed wrapper constructors